# docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /
 definitions:
+  handler.CreateWallet:
+    properties:
+      user_id:
+        type: integer
+    required:
+    - user_id
+    type: object
   handler.errorResponse:
     properties:
       message:
@@ -37,17 +44,15 @@ definitions:
         type: string
     required:
     - block
+    - walletUUID
     type: object
   models.User:
     properties:
-      email:
-        type: string
       password:
         type: string
       username:
         type: string
     required:
-    - email
     - password
     - username
     type: object
@@ -81,40 +86,6 @@ info:
   title: Wallet API
   version: "1.0"
 paths:
-  /api/admin/wallet/new:
-    post:
-      consumes:
-      - application/json
-      description: create wallet
-      operationId: create-wallet-admin
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: uuid
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Create Wallet
-      tags:
-      - ADMIN
   /api/v1/admin/wallet:
     post:
       consumes:
@@ -235,6 +206,47 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Block Wallet
+      tags:
+      - ADMIN
+  /api/v1/admin/wallet/new:
+    post:
+      consumes:
+      - application/json
+      description: create wallet
+      operationId: create-wallet-admin
+      parameters:
+      - description: User ID
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/handler.CreateWallet'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: uuid
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Create Wallet
       tags:
       - ADMIN
   /api/v1/admin/wallets/{wallet_uuid}:
@@ -431,6 +443,12 @@ paths:
       - application/json
       description: get wallet balance
       operationId: get-wallet-balance
+      parameters:
+      - description: Wallet UUID
+        in: path
+        name: wallet_uuid
+        required: true
+        type: string
       produces:
       - application/json
       responses:
